manifests/azure-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: cpn-public-svc
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: cpn
